--- a/react-deploy/src/index.css
+++ b/react-deploy/src/index.css
@@ -1,3 +1,11 @@
+/*
+ * Homework 2
+ * index CSS code
+ *
+ * Author: Denis Gracanin
+ * Version: 4.0
+ */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
