--- a/src/App.css
+++ b/src/App.css
@@ -1,75 +1,59 @@
-.App {
+.App-container {
+    margin: 0px;
+    padding: 0px;
     position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
 }
 
-.App .ticks {
+.App-container .ticks {
   font-size: 10px;
 }
 
-.App
+.App-container
 .track,
 .track-inset,
 .track-overlay {
     stroke-linecap: round;
 }
 
-.slider {
+.slider-svg {
     margin: 0px;
     padding: 0px;
-    position: absolute;
-    background-color : antiquewhite;
-    left: 5%;
-    top: 70%;
-    width: 90%;
-    height: 25%;
+    position: relative;
     min-height: 100px;
     max-height: 150px;
 }
 
-.App .label {
+.App-container .label {
     font-size: 15px;
 }
 
-.App .track {
+.App-container .track {
     stroke: #000;
     stroke-opacity: 0.3;
     stroke-width: 10px;
 }
 
-.App .track-inset {
+.App-container .track-inset {
     stroke: #dcdcdc;
     stroke-width: 8px;
 }
 
-.App .track-overlay {
+.App-container .track-overlay {
     pointer-events: stroke;
     stroke-width: 50px;
     stroke: transparent;
     cursor: crosshair;
 }
 
-.App .handle {
+.App-container .handle {
     fill: #fff;
     stroke: #000;
     stroke-opacity: 0.5;
     stroke-width: 1.25px;
 }
-
-/* #play-button {
-    position: absolute;
-    top: 140px;
-    left: 50px;
-    background: #f08080;
-    padding-right: 26px;
-    border-radius: 3px;
-    border: none;
-    color: white;
-    margin: 0;
-    padding: 0 12px;
-    width: 60px;
-    cursor: pointer;
-    height: 30px;
-} */
 
 #play-button {
     background: #f08080;
@@ -83,4 +67,4 @@
 
 #play-button:hover {
     background-color: #696969;
-}   
+}
